Adds todays logs only to logs table
